# ConvexHull

./: .gitignore  CMakeLists.txt  ConvexHull.sln  README.md
ConvexHull/: ConvexHull.vcxproj  test.cpp
build_tools/: cmake_generate.py
convex_hull_lib/: CMakeLists.txt  area.cc  bspline_fiting.hh  entity.hh  linear_system.hh  linking_number.cc  linking_number.hh  make_curve.cc  minsphere.hh  point_hull.cc  point_hull.hh  pow.hh  transofrom.cc  vector.hh
convex_hull_test/: CMakeLists.txt  gtest_wrapper.hpp  main.cpp  test.cpp
convex_hulll_lib/: CPointHull.cpp  CPointHull.h  area.hh  bspline_fiting.cc  bspline_fiting.hh  convex_hulll_lib.vcxproj  convex_hulll_lib.vcxproj.filters  entity.cc  entity.hh  geo_function.hh  linear_system.cc  linking_number.cc  plane_fitting.cc  plane_fitting.hh  point_in_polygon.cc  point_in_polygon.hh  polynomial_solver.cc  polynomial_solver.hh  range.hh  tolerance.hh  transofrom.hh  vector.cc
